[package]
name = "image-hosting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = { version = "0.6.0", features = ["tempfile"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
